fix sign in/sign out button spacing

--- a/src/main/resources/public/main.sass
+++ b/src/main/resources/public/main.sass
@@ -18,3 +18,6 @@
 .main
 	height: 50%
 	overflow-y: auto
+
+.thin-right
+	margin-right: 5px
